<resources>
    <string name="app_name">Activity Schedule</string>
    <string name="_empty"></string>

    <!-- MAIN ACTIVITY layout STRINGS -->
    <string name="_main_activity_all">VIEW ALL</string>
    <string name="_main_activity_selected">SELECTED</string>
    <string name="_main_activity_remove">REMOVE</string>

    <!-- EVENT ACTIVITY STRINGS -->
    <string name="_event_activity_title">Create new activity</string>
    <string name="_event_activity_field_name">Activity name</string>
    <string name="_event_activity_field_date">Date</string>

    <string name="button_create">CREATE</string>
    <string name="button_login">LOG IN</string>

    <string name="local_service_started">Play music</string>
    <string name="local_service_stop">Stop music</string>
    <string name="local_service_label">Playing music in background!</string>

    <!-- DRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_start_service">Start music</string>
    <string name="action_stop_service">Stop music</string>
    <string name="action_picture">Take picture</string>

    <string name="menu_map">Map GPS</string>
    <string name="menu_camera">Take a photo</string>
</resources>
