<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".EventActivity">


    <EditText
        android:id="@+id/textName"
        android:layout_width="310dp"
        android:layout_height="116dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:background="@color/_main_secondary"
        android:gravity="top"
        android:hint="@string/_event_activity_field_name"
        android:inputType="text|textMultiLine"
        android:padding="13dp"
        android:textColor="@color/_field_white"
        android:textColorHint="@color/_field_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textDate"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/_event_activity_field_date"
        android:inputType="date"
        android:text="@string/_empty"
        android:textColor="@color/_field_white"
        android:textColorHint="@color/_field_hint"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonPick"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        app:layout_constraintVertical_bias="0.443" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_empty"
        android:text="@string/_event_activity_title"
        android:textColor="@color/_support_icon"
        android:textSize="@dimen/_font_size_tb"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/text_event_count_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_empty"
        android:textColor="@color/_support_icon"
        android:textSize="@dimen/_font_size_sma"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!-- <ImageView
        android:id="@+id/selected1"
        android:layout_width="84dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:alpha="0.3"
        android:contentDescription="@string/_empty"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton1"
        app:layout_constraintEnd_toEndOf="@+id/imageButton1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageButton1"
        app:layout_constraintTop_toTopOf="@+id/imageButton1"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/_field_white" /> -->

    <ImageButton
        android:id="@+id/imageButton1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="@dimen/_image_button_width"
        android:layout_height="@dimen/_image_button_height"
        android:contentDescription="@string/_empty"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@color/_calender_basic" />

    <!-- <ImageView
         android:id="@+id/selected2"
         android:layout_width="84dp"
         android:layout_height="74dp"
         android:layout_marginStart="16dp"
         android:alpha="0.3"
         android:contentDescription="@string/_empty"
         android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
         app:layout_constraintEnd_toEndOf="@+id/imageButton2"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/imageButton2"
         app:layout_constraintTop_toTopOf="@+id/imageButton2"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@color/_field_white" /> -->


    <ImageButton
        android:id="@+id/imageButton2"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="@dimen/_image_button_width"
        android:layout_height="@dimen/_image_button_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54"
        app:srcCompat="@color/_calender_important" />

    <!-- <ImageView
         android:id="@+id/selected3"
         android:layout_width="84dp"
         android:layout_height="74dp"
         android:layout_marginStart="16dp"
         android:alpha="0.3"
         android:contentDescription="@string/_empty"
         android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
         app:layout_constraintEnd_toEndOf="@+id/imageButton3"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/imageButton3"
         app:layout_constraintTop_toTopOf="@+id/imageButton3"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@color/_field_white" /> -->

    <ImageButton
        android:id="@+id/imageButton3"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="@dimen/_image_button_width"
        android:layout_height="@dimen/_image_button_height"
        android:contentDescription="@string/_empty"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:srcCompat="@color/_calender_critical" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/_custom_button_style_shape"
        android:onClick="buttonOnClickSave"
        android:text="@string/button_create"
        android:textColor="@color/_main_primary"
        android:textSize="@dimen/_font_size_med"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:layout_constraintVertical_bias="0.69" />

    <ImageButton
        android:id="@+id/imageButtonPick"
        android:layout_width="41dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/_empty"
        app:layout_constraintBottom_toBottomOf="@+id/textDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textDate"
        app:layout_constraintTop_toTopOf="@+id/textDate"
        app:srcCompat="@drawable/ic_icon_event_rounded" />

    <ImageButton
        android:id="@+id/imageButtonColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.9"
        android:background="@android:color/transparent"
        android:contentDescription="@string/_empty"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toEndOf="@+id/imageViewColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/ic_color_lens_black_24dp" />

    <ImageView
        android:id="@+id/imageViewColor"
        android:layout_width="230dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/_button_dark"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonColor"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonColor"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButtonColor" />

</android.support.constraint.ConstraintLayout>